Transitioning to new input types for SkylineParameter